...
        <TouchableOpacity
          style={[
            styles.toolbarButton,
            state?.unorderedList.isActive && styles.toolbarButtonActive,
          ]}
          onPress={() => inputRef.current?.toggleUnorderedList()}
          testID="toolbar-unordered-list"
        >
          <Text style={styles.headingButtonText}>•</Text>
        </TouchableOpacity>
        <TouchableOpacity
          style={styles.toolbarButton}
          onPress={() => inputRef.current?.outdentList()}
...
        >
          <Text style={styles.headingButtonText}>⇤</Text>
        </TouchableOpacity>
        <TouchableOpacity
          style={styles.toolbarButton}
          onPress={() => inputRef.current?.indentList()}
          testID="toolbar-indent"
        >
          <Text style={styles.headingButtonText}>⇥</Text>
        </TouchableOpacity>
        <TouchableOpacity
          style={[
            styles.toolbarButton,
...
